--- a/html/services.html
+++ b/html/services.html
@@ -39,7 +39,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">concat us</a>
+                        <a class="nav-link" href="concatus.html">concat us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">About us</a>
