--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -4,21 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-
-    <title>Document</title>
-    <style>
-        body {
-            background-color: #acc7e312;
-        }
-    </style>
 </head>
 
-
-
 <body>
-    <!--nav links-->
     <!--nav links-->
     <div class="container-xxl containe  fixed-top ">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-menu-color">
@@ -72,48 +63,13 @@
             </div>
         </nav>
     </div>
-    <!--company info-->
-    <div class=" mt-3 mb-3 d-grid justify-content-center align-items-center">
-        <div class="card mb-3">
-            <img src="../assest/1643560653020.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">Samsung </h5>
-                <p class="card-text">South Korean company that is one of the world’s largest producers of electronic devices. Samsung specializes in the production of a wide variety of consumer and industry electronics, including appliances, digital media devices, semiconductors,
-                    memory chips, and integrated systems. It has become one of the most-recognizable names in technology and produces about a fifth of South Korea’s total exports.</p>
-                <div class="accordion accordion-flush" id="accordionFlushExample">
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingOne">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        Products
-                        </button>
-                        </h2>
-                        <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body"> Clothing, automotive, chemicals, consumer electronics, electronic components, medical equipment, semiconductors, solid state drives, DRAM, flash memory, ships, telecommunications equipment, home appliances[2].</div>
-                        </div>
-                    </div>
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="flush-headingTwo">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                         Services
-                        </button>
-                        </h2>
-                        <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                            <div class="accordion-body"> Advertising, construction, entertainment, financial services, hospitality, information and communications technology, medical and health care services, retail, shipbuilding, semiconductor foundry.</div>
-                        </div>
-                    </div>
-
-                </div>
-                <p class="card-text"><small class="text-muted">Samsung Town in the Gangnam station area of Seoul, South Korea</small></p>
-            </div>
-        </div>
-    </div>
-
     <!--footer-->
     <footer class="text-capitalize text-center mt-2 ">
 
         <div class="mt-3 bg-light p-2">&copy;All copyight reseved for <span style="color: #981d30;">FO</span> <span>rsa</span>2022</div>
     </footer>
-    <script src="../js/bootstrap.min.js"></script>
+    <script src='../js/bootstrap.min.js'>
+    </script>
 </body>
 
 </html>
