--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="#">concat us</a>
+                            <a class="nav-link" href="html/concatus.html">concat us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">About us</a>
@@ -64,7 +64,7 @@
         </nav>
     </div>
     <!--slider-->
-    <main class="ontainer-fluid">
+    <main class="ontainer-fluid pt-5">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -109,7 +109,30 @@
     <div class="advartesment row row-cols-1 row-cols-md-2 g-4 m-4 d-lg-flex justify-content-lg-between align-items-center">
         <div class="card mb-3" style="max-width: 540px; ">
             <div class="row g-0 ">
-                <div class="col-md-4 border-dark align-items-center ">
+                <div class="col-md-4 border-dark  ">
+                    <svg width=" 92.756px " height="192.756px " viewBox="0 0 192.756 192.756 " xmlns="http://www.w3.org/2000/svg "><g fill-rule="evenodd " clip-rule="evenodd "><path fill="#fff " d="M0 0h192.756v192.756H0V0z "/><path d="M24.037 110.41c-2.514-1.575-4.367-7.01-4.367-13.469
+                    0-.237.001-.471.007-.704l.002.003c-6.994-1.099-12.047-4.11-12.177-7.672l-.02.042c-1.711 2.127-2.688 4.586-2.688 7.206 0 7.71 8.463 14.027 19.198 14.586l.045.008zM1.56 96.378c0-8.626 10.736-15.621 23.979-15.621 13.244 0 23.98 6.995 23.98
+                    15.621 0 8.627-10.736 15.622-23.98 15.622-13.243 0-23.979-6.995-23.979-15.622zm23.98-13.367c2.557 0 4.732 3.879 5.538 9.291l.002-.009c4.975-.774 8.457-2.56 8.457-4.639 0-2.789-6.267-5.048-13.997-5.048-7.729 0-13.996 2.259-13.996 5.048
+                    0 2.079 3.482 3.864 8.456 4.639l.003.009c.806-5.412 2.981-9.291 5.537-9.291zm1.548 27.39c10.735-.559 19.199-6.876 19.199-14.586 0-2.62-.978-5.079-2.688-7.206l-.021-.042c-.129 3.562-5.182 6.573-12.177 7.672l.003-.003c.005.233.007.467.007.704
+                    0 6.459-1.854 11.894-4.367 13.469l.044-.008zM25.54 92.703a37.94 37.94 0 0 0 3.325-.142l-.001.001c-.53-3.468-1.818-5.917-3.323-5.917s-2.792 2.449-3.323 5.917l-.001-.001a38.27 38.27 0 0 0 3.323.142zm0 12.846c1.925 0 3.496-4.006 3.579-9.029l.01.003a39.115
+                    39.115 0 0 1-7.177 0l.01-.003c.083 5.023 1.653 9.029 3.578 9.029zM123.922 96.378c0-6.593 5.346-11.939 11.939-11.939 6.596 0 11.941 5.346 11.941 11.939 0 6.595-5.346 11.939-11.941 11.939-6.593 0-11.939-5.344-11.939-11.939zm11.939 7.561c3.682
+                    0 6.668-3.386 6.668-7.562 0-4.175-2.986-7.561-6.668-7.561s-6.666 3.386-6.666 7.561c0 4.177 2.985 7.562 6.666 7.562zM161.35 89.413v18.362h-5.032V89.413h.018-7.035v-4.151h19.066v4.151h-7.017zM174.453 102.71l-.004.005-1.93 5.061h-5.877l9.289-22.514h6.262l9.287
+                    22.514h-5.875l-1.93-5.061-.006-.005H174.453zm4.609-3.8h3.166l-.002.001-3.143-8.24h-.043l-3.143 8.24-.002-.001h3.167zM68.617 89.413v18.362h-5.031V89.413h.018-7.036v-4.151h19.067v4.151h-7.018zM76.922 96.378c0-6.593 5.346-11.939 11.941-11.939
+                    6.594 0 11.94 5.346 11.94 11.939 0 6.595-5.346 11.939-11.94 11.939-6.595 0-11.941-5.344-11.941-11.939zm11.941 7.561c3.681 0 6.667-3.386 6.667-7.562 0-4.175-2.986-7.561-6.667-7.561-3.682 0-6.667 3.386-6.667 7.561 0 4.177 2.985 7.562 6.667
+                    7.562zM112.361 107.775h2.551v-8.548l8.777-13.965h-5.875l-5.453 9.463-5.451-9.463h-5.875l8.776 13.965v8.548h2.55z " fill="#cc2229 "/></g></svg> </div>
+                <div class="col-md-8  ">
+                    <div class="card-body bg-light ">
+                        <h2 class="card-title "> Toyota</h2>
+                        <h5 class="card-subtitle ">one of 10 famous company</h5>
+                        <p class="card-text ">Toyota say we here for you and we seek to offer bettwe for you.</p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card mb-3" style="max-width: 540px; ">
+            <div class="row g-0 ">
+                <div class="col-md-4 border-dark  ">
                     <svg width=" 92.756px " height="192.756px " viewBox="0 0 192.756 192.756 " xmlns="http://www.w3.org/2000/svg "><g fill-rule="evenodd " clip-rule="evenodd "><path fill="#fff " d="M0 0h192.756v192.756H0V0z "/><path d="M24.037 110.41c-2.514-1.575-4.367-7.01-4.367-13.469
                     0-.237.001-.471.007-.704l.002.003c-6.994-1.099-12.047-4.11-12.177-7.672l-.02.042c-1.711 2.127-2.688 4.586-2.688 7.206 0 7.71 8.463 14.027 19.198 14.586l.045.008zM1.56 96.378c0-8.626 10.736-15.621 23.979-15.621 13.244 0 23.98 6.995 23.98
                     15.621 0 8.627-10.736 15.622-23.98 15.622-13.243 0-23.979-6.995-23.979-15.622zm23.98-13.367c2.557 0 4.732 3.879 5.538 9.291l.002-.009c4.975-.774 8.457-2.56 8.457-4.639 0-2.789-6.267-5.048-13.997-5.048-7.729 0-13.996 2.259-13.996 5.048
@@ -131,26 +154,9 @@
             </div>
         </div>
         <div class="card mb-3 border-light " style="max-width: 540px; ">
-            <div class="row g-0  align-items-center">
-                <div class="col-md-4 img-fluid rounded-start">
-                    <svg width="108.457px " height="100.457px " viewBox="0 -89.31 288.457 288.457 " xmlns="http://www.w3.org/2000/svg "><path d="M54.9 109.343c-29.996 0-54.4-24.414-54.4-54.42C.5 24.914 24.904.501 54.9.501c29.995 0 54.398 24.414 54.398
-                    54.422 0 30.006-24.403 54.42-54.398 54.42z " fill="#fff "/><path d="M54.9 1c29.766 0 53.898 24.141 53.898 53.922S84.666 108.843 54.9 108.843C25.132 108.843 1 84.702 1 54.922S25.132 1 54.9 1m0-1C24.628 0 0 24.638 0 54.922c0 30.285 24.628
-                    54.921 54.9 54.921 30.271 0 54.898-24.639 54.898-54.921C109.798 24.638 85.171 0 54.9 0z " fill="#004883 "/><g><g fill="#004883 "><path d="M287.447 32.806c.605-.706 1.01-1.511 1.01-2.52a4.1 4.1 0 0 0-1.01-2.726c-.709-.708-1.612-1.112-2.625-1.112-1.006
-                    0-1.812.405-2.623 1.112-.703.707-1.01 1.615-1.01 2.726 0 1.009.307 1.814 1.01 2.52.811.707 1.617 1.009 2.623 1.009 1.013 0 1.916-.302 2.625-1.009zM287.652 69.945V37.348H282.2l.103 32.597h5.349zM275.034 38.964l-.906-.405c-2.423-1.414-5.351-2.119-8.881-2.119-3.836
-                    0-6.964.907-9.285 2.724-1.211.909-2.019 1.816-2.624 3.029-.604 1.109-.91 2.219-.91 3.53 0 2.221 1.012 4.037 2.83 5.651 1.713 1.515 4.235 2.726 7.566 3.734 2.824.908 4.742 1.817 5.953 2.726 1.011 1.01 1.617 2.119 1.617 3.531 0 1.514-.808
-                    2.725-2.223 3.735-1.414.808-3.434 1.312-5.953 1.312-2.727 0-5.449-.707-8.275-2.021l-.707-.502-2.321 4.237.81.404c3.127 1.514 6.56 2.219 10.293 2.219 4.037 0 7.367-.807 9.99-2.623 1.312-.808 2.221-1.916 2.928-3.025.703-1.312 1.008-2.727
-                    1.008-4.139v-.104c0-2.421-1.008-4.541-2.926-6.255-1.613-1.411-4.238-2.624-7.67-3.632-2.625-.912-4.541-1.819-5.652-2.525-1.211-.91-1.715-1.917-1.715-3.027 0-1.313.504-2.32 1.617-3.228 1.209-.809 2.821-1.314 4.942-1.314 2.927 0 5.349.505
-                    7.267 1.716l.707.505 2.52-4.134zM242.137 41.385c-3.734-3.229-8.375-4.944-13.727-4.944-5.247 0-9.586 1.613-13.117 4.742-3.938 3.534-5.954 8.376-5.954 14.734v25.33h5.245V64.899c1.616 1.815 3.637 3.229 6.057 4.24 2.422 1.108 5.045 1.612 7.873
-                    1.612 5.348 0 9.889-1.612 13.623-5.047 3.836-3.33 5.75-7.365 5.75-12.11 0-4.843-1.914-8.878-5.75-12.209zm-13.727-.405c3.938 0 7.367 1.213 9.99 3.633 2.727 2.422 4.14 5.448 4.14 9.085 0 3.428-1.213 6.254-3.634 8.676-2.623 2.523-6.155 3.836-10.393
-                    3.836-4.242 0-7.674-1.312-10.397-3.836-2.521-2.521-3.731-5.347-3.731-8.676 0-3.333 1.211-6.258 3.731-8.682 2.626-2.622 6.058-4.036 10.294-4.036zM200.961 43.001c-3.529-4.442-8.576-6.561-15.339-6.561-5.046 0-9.388 1.413-13.12 4.439-4.035
-                    3.129-6.053 7.369-6.053 12.616 0 2.926.806 5.853 2.521 8.577 1.516 2.623 3.836 4.744 6.965 6.357 3.127 1.515 6.457 2.22 10.09 2.22 3.432 0 6.66-.705 9.791-2.22 3.125-1.613 5.447-3.734 6.961-6.357l1.01-1.716h-5.852c-1.213 1.716-2.931 3.13-5.147
-                    4.239-2.22 1.109-4.642 1.615-6.964 1.615-3.229 0-5.954-.81-8.377-2.424-2.422-1.715-4.035-3.834-5.045-6.66 3.328-1.312 6.66-2.019 10.295-2.019l5.449.604 8.476.809c2.623 0 4.847-.404 6.862-1.008.809-.304 1.312-.708 1.516-1.213.301-.403.301-1.107.102-1.918-.609-3.63-1.92-6.757-4.141-9.38zm-1.41
-                    8.277l.1.2-2.928.403-6.357-.604-8.881-.709h-1.514c-2.826.202-5.449.709-7.973 1.615.402-3.735 2.221-6.663 5.249-8.78 2.521-1.617 5.349-2.524 8.375-2.524 4.741 0 8.376 1.514 11.101 4.542 1.414 1.818 2.421 3.734 2.828 5.857zM142.933 36.44c-5.147
-                    0-9.587 1.613-13.119 4.742-3.936 3.534-5.854 8.376-5.854 14.733l-.1 25.33h5.45l-.102-16.348c1.615 1.816 3.633 3.229 5.955 4.24 2.522 1.109 5.147 1.611 7.972 1.611 5.349 0 9.89-1.611 13.625-5.045 3.834-3.33 5.65-7.367 5.65-12.111 0-4.844-1.816-8.879-5.551-12.21-3.834-3.227-8.375-4.942-13.926-4.942zm-10.293
-                    8.577c2.725-2.623 6.056-4.037 10.293-4.037 4.038 0 7.368 1.213 10.09 3.633 2.728 2.422 4.037 5.448 4.037 9.085 0 3.428-1.209 6.254-3.533 8.676-2.621 2.523-6.053 3.836-10.493 3.836-4.138 0-7.669-1.312-10.395-3.836-2.422-2.521-3.633-5.347-3.633-8.676.001-3.332
-                    1.211-6.257 3.634-8.681z "/></g><path d="M85.72 14.064a13.24 13.24 0 0 1-1.316-1.14A51.059 51.059 0 0 0 54.9 3.589c-28.337 0-51.309 22.982-51.309 51.332a51.142 51.142 0 0 0 10.153 30.657c17.17-5.07 32.15-13.891 44.988-26.64C71.554 46.25
-                    80.564 31.233 85.72 14.064z " fill="#e32934 "/><path d="M54.9 106.253c28.335 0 51.307-22.985 51.307-51.333 0-10.035-2.88-19.392-7.854-27.297a2.779 2.779 0 0 1-.35-.427 36.509 36.509 0 0 1 1.569 10.626c0 5.825-1.346 11.338-3.99 16.5a37.344
-                    37.344 0 0 1-10.759 12.461c-3.586 2.645-7.89 4.887-12.957 6.725-4.033 1.476-9.279 3.002-15.778 4.479l-18.74 4.217c-7.967 1.826-15.223 3.78-21.687 5.781 9.411 11.173 23.495 18.268 39.239 18.268z " fill="#004883 "/></g></svg>
+            <div class="row g-0  ">
+                <div class="col-md-4 img-fluid ">
+
                 </div>
                 <div class="col-md-8 ">
                     <div class="card-body bg-light ">
@@ -220,7 +226,7 @@
                     </div>
                 </div>
                 <div class="card ">
-                    <span class="img-card-top "><svg width="285.256px " height="100.256px " viewBox="2.375 -22.63 285.256 285.256 " xmlns="http://www.w3.org/2000/svg "><path fill="#0F3A97 " d="M252.51 120c0 64.618-53.233 117.8-117.92 117.8-64.685 0-117.92-53.185-117.92-117.8
+                    <span class="img-card-top text-center "><svg width="285.256px " height="100.256px " viewBox="2.375 -22.63 285.256 285.256 " xmlns="http://www.w3.org/2000/svg "><path fill="#0F3A97 " d="M252.51 120c0 64.618-53.233 117.8-117.92 117.8-64.685 0-117.92-53.185-117.92-117.8
                     0-64.622 51.99-117.8 117.92-117.8 63.436 0 117.92 53.181 117.92 117.8 "/><path fill="#FFF " d="M161.188 182c50.379 20.725 41.638-31.646 14.783-71.747-15.221-22.718-35.071-41.646-47.591-50.78-41.513-30.298-67.14-11.922-37.826 47.83 9.478
                     19.319 21.651 32.358 31.159 44.648 7.261 9.383 21.404 14.081 16.422 18.531-5.615 5.021-19.209-17.123-19.209-17.123-10.04-12.108-19.61-25.028-29.473-42.76-22.533-40.497-19.284-81.831 21.505-63.826 34.615 15.288 67.678 58.166 80.973 88.616
                     6.139 14.062 22.879 69.692-30.438 47.2 "/><path fill="#F7410A " d="M4.526 154.92c22.163-14.76 43.176-24.29 78.935-36.102 50.249-16.6 88.067-27.758 134.472-51.082 20.771-10.438 56.811-33.847 69.698-54.196-3.858 7.876-15.812 23.206-21.22
