--- a/html/pagesofjobs.html
+++ b/html/pagesofjobs.html
@@ -1113,6 +1113,8 @@ c45.4,27,100.5-15,86.5-65.9l-71.3-247.7l209.2-181.399C960.443,389.172,938.744,32
     </footer>
     <script src="../js/bootstrap.min.js "></script>
     <script src="../js/jquery.min.js "></script>
+    <script src="../js/script.js"></script>
+
 
 </body>
 
