--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="bg-white">
     <!--nav links-->
     <div class="container-xxl containe  fixed-top ">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav-menu-color">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><span style="color: #981d30;">FO</span> <span>rsa</span></a>
+                <a class="navbar-brand" href="index.html"><span style="color: #981d30;">FO</span> <span>rsa</span></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -45,7 +45,10 @@
                             <a class="nav-link" href="html/concatus.html">concat us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About us</a>
+                            <a class="nav-link" href="html/aboutUs.html">About us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="html/languae.html">Arabic</a>
                         </li>
                         <li class="nav-item  m-1">
                             <a class="nav-link btn btn-outline-light" href="#">
@@ -107,7 +110,7 @@
 
     </main>
     <!---advartesment---->
-    <div class="advartesment row row-cols-1 row-cols-md-2 g-4 m-4 d-lg-flex justify-content-lg-between align-items-center">
+    <div class="advartesment bg-white row row-cols-1 row-cols-md-2 g-4 m-4 d-lg-flex justify-content-lg-between align-items-center">
         <div class="card mb-3" style="max-width: 540px; ">
             <div class="row g-0 ">
                 <div class="col-md-4 border-dark  ">
@@ -154,21 +157,7 @@
                 </div>
             </div>
         </div>
-        <div class="card mb-3 border-light " style="max-width: 540px; ">
-            <div class="row g-0  ">
-                <div class="col-md-4 img-fluid ">
 
-                </div>
-                <div class="col-md-8 ">
-                    <div class="card-body bg-light ">
-                        <h2 class="card-title "> pepsi</h2>
-                        <h5 class="card-subtitle ">one of 10 famous company</h5>
-                        <p class="card-text ">pepsi say we here for you and we seek to offer bettwe for you.</p>
-
-                    </div>
-                </div>
-            </div>
-        </div>
 
     </div>
     <!--last-job-->
