--- a/html/concatus.html
+++ b/html/concatus.html
@@ -98,7 +98,7 @@
                         <div class="col-md-6">
                             <div class="form-group form-group-textarea mb-md-0">
                                 <!-- Message input-->
-                                <textarea class="form-control" id="message" placeholder="Your Message *" data-sb-validations="required"></textarea>
+                                <textarea class="form-control h-100" id="message" placeholder="Your Message *" data-sb-validations="required"></textarea>
                                 <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
                             </div>
                         </div>
@@ -125,8 +125,9 @@
                     </div>
                     <!-- Submit Button-->
                     <div class="text-center">
-                        <button class="btn btn-primary  text-uppercase " id="submitButton" type="submit">Send Message</button></div>
+                        <button class="btn border-0 text-uppercase text-white" style="background-color: #1572a1;">send message</button>
 
+                    </div>
 
                 </form>
             </div>
@@ -189,6 +190,8 @@
     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 
     <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/script.js"></script>
+
 </body>
 
 </html>
