--- a/html/pagesofjobs.html
+++ b/html/pagesofjobs.html
@@ -121,7 +121,7 @@
                     <div class="row">
                         <!---card-->
 
-                        <div class="col-lg-4 pt-2">
+                        <div class="col-lg-4 pt-2 carn">
                             <div class="card">
                                 <div class="card-header bg-white " style='padding-bottom: 0; border-bottom: none; '>
                                     <h5 class="card-title company-name">toyota </h5>
@@ -203,7 +203,7 @@
 
                         <!---card-->
 
-                        <div class="col-lg-4 pt-2">
+                        <div class="col-lg-4 pt-2 carn">
                             <div class="card">
                                 <div class="card-header bg-white " style='padding-bottom: 0; border-bottom: none; '>
                                     <h5 class="card-title company-name">pepsi </h5>
@@ -284,7 +284,7 @@ c45.4,27,100.5-15,86.5-65.9l-71.3-247.7l209.2-181.399C960.443,389.172,938.744,32
                         </div>
                         <!---card-->
 
-                        <div class="col-lg-4 pt-2">
+                        <div class="col-lg-4 pt-2 carn">
                             <div class="card">
                                 <div class="card-header bg-white " style='padding-bottom: 0; border-bottom: none; '>
                                     <h5 class="card-title company-name">nasa </h5>
@@ -365,7 +365,7 @@ c45.4,27,100.5-15,86.5-65.9l-71.3-247.7l209.2-181.399C960.443,389.172,938.744,32
                         </div>
                         <!---card-->
 
-                        <div class="col-lg-4 pt-2">
+                        <div class="col-lg-4 pt-2 carn">
                             <div class="card">
                                 <div class="card-header bg-white " style='padding-bottom: 0; border-bottom: none; '>
                                     <h5 class="card-title company-name">microsoft </h5>
@@ -446,7 +446,7 @@ c45.4,27,100.5-15,86.5-65.9l-71.3-247.7l209.2-181.399C960.443,389.172,938.744,32
                         </div>
                         <!---card-->
 
-                        <div class="col-lg-4 pt-2">
+                        <div class="col-lg-4 pt-2 carn">
                             <div class="card">
                                 <div class="card-header bg-white " style='padding-bottom: 0; border-bottom: none; '>
                                     <h5 class="card-title company-name">Samsung </h5>
@@ -527,7 +527,7 @@ c45.4,27,100.5-15,86.5-65.9l-71.3-247.7l209.2-181.399C960.443,389.172,938.744,32
                         </div>
                         <!---card-->
 
-                        <div class="col-lg-4 pt-2">
+                        <div class="col-lg-4 pt-2 carn">
                             <div class="card">
                                 <div class="card-header bg-white " style='padding-bottom: 0; border-bottom: none; '>
                                     <h5 class="card-title company-name">Samsung </h5>
@@ -618,7 +618,7 @@ c45.4,27,100.5-15,86.5-65.9l-71.3-247.7l209.2-181.399C960.443,389.172,938.744,32
                     <div class="row">
                         <!---card-->
 
-                        <div class="col-lg-4 pt-2">
+                        <div class="col-lg-4 pt-2 carn">
                             <div class="card">
                                 <div class="card-header bg-white " style='padding-bottom: 0; border-bottom: none; '>
                                     <h5 class="card-title company-name">toyota </h5>
@@ -700,7 +700,7 @@ c45.4,27,100.5-15,86.5-65.9l-71.3-247.7l209.2-181.399C960.443,389.172,938.744,32
 
                         <!---card-->
 
-                        <div class="col-lg-4 pt-2">
+                        <div class="col-lg-4 pt-2 carn">
                             <div class="card">
                                 <div class="card-header bg-white " style='padding-bottom: 0; border-bottom: none; '>
                                     <h5 class="card-title company-name">pepsi </h5>
@@ -781,7 +781,7 @@ c45.4,27,100.5-15,86.5-65.9l-71.3-247.7l209.2-181.399C960.443,389.172,938.744,32
                         </div>
                         <!---card-->
 
-                        <div class="col-lg-4 pt-2">
+                        <div class="col-lg-4 pt-2 carn">
                             <div class="card">
                                 <div class="card-header bg-white " style='padding-bottom: 0; border-bottom: none; '>
                                     <h5 class="card-title company-name">nasa </h5>
@@ -862,7 +862,7 @@ c45.4,27,100.5-15,86.5-65.9l-71.3-247.7l209.2-181.399C960.443,389.172,938.744,32
                         </div>
                         <!---card-->
 
-                        <div class="col-lg-4 pt-2">
+                        <div class="col-lg-4 pt-2 carn">
                             <div class="card">
                                 <div class="card-header bg-white " style='padding-bottom: 0; border-bottom: none; '>
                                     <h5 class="card-title company-name">microsoft </h5>
@@ -943,7 +943,7 @@ c45.4,27,100.5-15,86.5-65.9l-71.3-247.7l209.2-181.399C960.443,389.172,938.744,32
                         </div>
                         <!---card-->
 
-                        <div class="col-lg-4 pt-2">
+                        <div class="col-lg-4 pt-2 carn">
                             <div class="card">
                                 <div class="card-header bg-white " style='padding-bottom: 0; border-bottom: none; '>
                                     <h5 class="card-title company-name">Samsung </h5>
@@ -1024,7 +1024,7 @@ c45.4,27,100.5-15,86.5-65.9l-71.3-247.7l209.2-181.399C960.443,389.172,938.744,32
                         </div>
                         <!---card-->
 
-                        <div class="col-lg-4 pt-2">
+                        <div class="col-lg-4 pt-2 carn">
                             <div class="card">
                                 <div class="card-header bg-white " style='padding-bottom: 0; border-bottom: none; '>
                                     <h5 class="card-title company-name">Samsung </h5>
@@ -1048,7 +1048,7 @@ c45.4,27,100.5-15,86.5-65.9l-71.3-247.7l209.2-181.399C960.443,389.172,938.744,32
                                         <li class=""><span>count of works 12 hours</span></li>
                                         <li class=""><span>1-2years experience</span></li>
                                         <li class=""><span>salary after interview</span></li>
-                                        <li> <span class=" city"> position of work:Aden</span>
+                                        <li> <span class=" city">Aden</span>
                                         </li>
                                     </ul>
                                     <div class="widget-49-meeting-action d-flex justify-content-between">
@@ -1118,7 +1118,30 @@ c45.4,27,100.5-15,86.5-65.9l-71.3-247.7l209.2-181.399C960.443,389.172,938.744,32
     <script src="../js/bootstrap.min.js "></script>
     <script src="../js/jquery.min.js "></script>
     <script src="../js/script.js"></script>
+    <script>
+        $(document).ready(
+            function() {
 
+                $('#city-search').change(function() {
+                    var filter = $(this).val();
+                    $(' .city').each(function() {
+                        if ($(this).text == filter) {
+
+                            $('.carn').show();
+                        } else {
+                            $('.carn ').hide();
+                        }
+                    });
+
+                });
+                $("#key-search").on("keyup", function() {
+                    var value = $(this).val().toLowerCase();
+                    $(".card").filter(function() {
+                        $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                    });
+                });
+            });
+    </script>
 
 </body>
 
