--- a/html/po-ed.html
+++ b/html/po-ed.html
@@ -14,7 +14,7 @@
         <div class="card-body">
             <div class="d-flex flex-column align-items-center text-center">
                 <div class="img">
-                    <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+                    <img src="" alt="" class="rounded-circle" width="150">
 
                     <input type="file" name="" id="file-img" accept="image/*">
                     <label for="file-img">Edit profile</label>
