--- a/html/services.html
+++ b/html/services.html
@@ -582,8 +582,9 @@
     <div class="mt-3 bg-light p-2">&copy;All copyight reseved for <span style="color: #981d30;">FO</span> <span>rsa</span>2022</div>
 </footer>
 
-<body>
-    <link rel="stylesheet" href="../js/bootstrap.min.js">
+
+<link rel="stylesheet" href="../js/bootstrap.min.js">
+<script src="../js/script.js"></script>
 </body>
 
 </html>
