--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                             <a class="nav-link" href="html/aboutUs.html">About us</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="html/dashboard.html">dash bord</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="html/languae.html">Arabic</a>
                         </li>
                         <li class="nav-item  m-1">
@@ -513,6 +516,7 @@
     </footer>
 
     <script src="js/bootstrap.min.js "></script>
+    <script src='js/script.js'></script>
 </body>
 
 
