--- a/html/companypage.html
+++ b/html/companypage.html
@@ -117,6 +117,8 @@
         <div class="mt-3 bg-light p-2">&copy;All copyight reseved for <span style="color: #981d30;">FO</span> <span>rsa</span>2022</div>
     </footer>
     <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/script.js"></script>
+
 </body>
 
 </html>
