--- a/html/pagesofjobs.html
+++ b/html/pagesofjobs.html
@@ -55,6 +55,9 @@
                             <a class="nav-link" href="aboutUs.html">About us</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="dashboard.html">Dash Board</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="">Arabic</a>
                         </li>
                         <li class="nav-item  m-1">
@@ -1144,5 +1147,7 @@ c45.4,27,100.5-15,86.5-65.9l-71.3-247.7l209.2-181.399C960.443,389.172,938.744,32
     </script>
 
 </body>
+
+</html>
 
 </html>
