--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -48,6 +48,9 @@
                             <a class="nav-link" href="aboutUs.html">About us</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="dashboard.html">Dash Board</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="">Arabic</a>
                         </li>
                         <li class="nav-item  m-1">
